tests/typing/fail/number-logic-01.stderr
error: type mismatch: expected `bool`, found `int`
 --> tests/typing/fail/number-logic-01.rs:8:20
  |
8 |         a : bool = !3;
  |                    ^^
